feat: update order documentation
